--- a/movies/package.json
+++ b/movies/package.json
@@ -12,6 +12,9 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.16",
-        "vite": "^5.0"
+        "vite": "^6.0.3"
+    },
+    "dependencies": {
+        "esbuild": "^0.24.0"
     }
 }
